--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/example
-    username: root
-    password: 1344
+    username: ****
+    password: ****
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: false
